[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
log = "0.4.17"
gloo = "0.3"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.web-sys]
version = "0.3"
features = ["EventTarget", "HtmlInputElement"]
